# blender-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: bump-version.yml  release.yml
src/blender_cli/addon/: __init__.py  blender_manifest.toml  dispatcher.py  handlers.py  operators.py  panels.py  server.py
src/blender_cli/cli/: client.py  main.py
tests/: conftest.py  test_client.py  test_dispatcher.py  test_handlers.py  test_server.py
